Fix navbar collapse on mobile

--- a/src/assets/sass/master.sass
+++ b/src/assets/sass/master.sass
@@ -20,4 +20,20 @@
 
 .display-4
 	color: #fff
-	font-weight: 400
+	font-weight: 600
+	text-transform: uppercase
+	text-shadow: 5px 4px 1px rgba(32, 33, 36, 0.28)
+
+
+
+@media (max-width: 991px)
+	.front-text
+		height: 15rem
+
+@media (max-width: 700px)
+	.front-text
+		height: 10rem
+
+@media (max-width: 400px)
+	.front-text
+		height: 7rem
